			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

02-Dec-2003
~~~~~~~~~~~
Allow editing a symlink's target from the Properties box (Arnaud Calvo).
Experimental extended attributes support for setting MIME types (Stephen
Watson).

29-Nov-2003
~~~~~~~~~~~
More drag and drop fixes relating to escaped URI's (Stephen Watson).

23-Nov-2003
~~~~~~~~~~~
Added 'Specify the prefix' install option (Ryan Pavlik).
Updated Russian translation (Vladimir Popov).

20-Nov-2003
~~~~~~~~~~~
Bugfix: Cancelling the info window with a du process still running could
        crash the filer (reported by Peter Geer).

17-Nov-2003
~~~~~~~~~~~
Renamed 'Info' menu item to 'Properties'.

31-Oct-2003
~~~~~~~~~~~
If a panel icon has an empty label, show it full size (requested by Stephen
Crouch).

26-Oct-2003
~~~~~~~~~~~
Use apsymbols.h (from autopackage.org) if possible for binary compatibility
with older glibc versions. Use g_ascii_* functions instead of the ctypes ones
for the same reason.
Bugfix: Files with '&' in their names couldn't be saved in groups (reported
	by Nils-Erik Svangård).

25-Oct-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).
Resizing by double clicking on background now optional (Stephen Watson).

22-Oct-2003
~~~~~~~~~~~
Added optional top and bottom margines for iconized window placement
(Stephen Watson).

16-Oct-2003
~~~~~~~~~~~
Don't lower the panel due when the pointer 'leaves' due to a grab (eg, clicking
or opening a menu).

15-Oct-2003
~~~~~~~~~~~
Bugfix: FreeBSD reported file sizes with units of 'null' due to large file
	support not being detected (igla).

14-Oct-2003
~~~~~~~~~~~
Larger default size for bookmarks editor (requested by Matthew Weier OPhinney).

13-Oct 2003
~~~~~~~~~~~
Let the thumbnail helpers be app dirs, plus can be set from the Set Icon
dialog (Stephen Watson).

09-Oct-2003
~~~~~~~~~~~
Improved socket icon (taken from Howard Shane's new theme).

08-Oct-2003
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).