@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+03-Dec-2003
+~~~~~~~~~~~
+Work out which include file we need for getxattr (Stephen Watson).
+
 02-Dec-2003
 ~~~~~~~~~~~
 Allow editing a symlink's target from the Properties box (Arnaud Calvo).
